# tauri-tray-app

./: .eslintrc.js  .makeme.yaml  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.storybook/: main.ts  preview.ts
src/: actions.tsx  app.tsx  form.tsx  index.css  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/password-field/: index.tsx
src/components/signup/: index.tsx
src/components/ui/: accordion.tsx
src/components/ui/button/: index.tsx
src/components/ui/forms/: index.tsx
src/components/ui/input/: index.tsx
src/components/ui/skeleton/: index.tsx
src/components/ui/toast/: toast.tsx  toaster.tsx  use-toast.ts
src/components/xui/button/: index.tsx
src/components/xui/forms/: index.tsx
src/components/xui/skeleton/: index.tsx
src/components/xui/use-dark/: index.ts
src/demo/: actions.tsx  app.tsx  form.tsx
src/hooks/: use-form.tsx
src/store/: index.ts  reducers.ts
src/stories/: Button.stories.tsx  signup.stories.tsx
src/zstore/: index.ts
